--- a/reference/OpenBank.yaml
+++ b/reference/OpenBank.yaml
@@ -29,7 +29,9 @@ paths:
           application/json:
             schema:
               type: object
-              properties: {}
+              properties:
+                '':
+                  $ref: ../models/Client.yaml
     post:
       summary: ''
       operationId: post-banks
