--- a/reference/OpenBank.yaml
+++ b/reference/OpenBank.yaml
@@ -9,7 +9,32 @@ info:
 servers:
   - url: 'http://localhost:3000'
 paths:
-  /banks: {}
+  /banks:
+    get:
+      summary: ''
+      operationId: get-banks
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: ../models/Bank.yaml
+              examples:
+                Example 1:
+                  value:
+                    id: '39'
+      parameters:
+        - $ref: '#/components/parameters/bankId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: ../models/Bank.yaml
+            examples:
+              Example 1:
+                value:
+                  id: '42'
 components:
   schemas:
     User:
